Button alignment fix

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -11,7 +11,7 @@
   font-weight: 700;
   display: flex;
   justify-content: center;
-  margin-top: 12px;
+  margin: 12px 8px 0;
   padding: 14px 24px;
   text-align: center;
   text-transform: uppercase;
